--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, aliquam, voluptatem amet perferendis hic totam vero maxime saepe consequatur doloremque architecto magnam magni quos id necessitatibus quisquam quaerat! Sunt, a.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero dignissimos hic facere sint alias, quidem provident expedita obcaecati totam officia nihil ipsum ipsam. Beatae earum consectetur facere iste porro.</p>
         </article>
     </main>  
 </body>
