--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, aliquam, voluptatem amet perferendis hic totam vero maxime saepe consequatur doloremque architecto magnam magni quos id necessitatibus quisquam quaerat! Sunt, a.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero dignissimos hic facere sint alias, quidem provident expedita obcaecati totam officia nihil ipsum ipsam. Beatae earum consectetur facere iste porro.</p>
         </article>
     </main>  
