--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <img src="imagens/curso-html-css.png" alt="Curso HTML">
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, aliquam, voluptatem amet perferendis hic totam vero maxime saepe consequatur doloremque architecto magnam magni quos id necessitatibus quisquam quaerat! Sunt, a.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero dignissimos hic facere sint alias, quidem provident expedita obcaecati totam officia nihil ipsum ipsam. Beatae earum consectetur facere iste porro.</p>
+            <p><a href="curso-js.html">Acesso o curso de JavaScript</a></p>
         </article>
     </main>  
 </body>
